style.css
/* reset universal settings */
* {
    padding: 0;
    margin: 0;
}

@font-face {
    font-family: 'source-sans-3';
    src: url('font/SourceSans3-Regular.ttf') format('truetype');
}

/* light mode configurations */
body {
    width: 70%;
    margin: 0 auto;
    background-color: rgb(202, 207, 210);
    transition: background-color 500ms ease;
    font-family: 'source-sans-3', Arial, Helvetica, sans-serif;
}

header {
    width: 100%;
    background-color: rgb(242, 243, 244);
    border-bottom: 0.6px solid rgb(144, 148, 151);
    position: fixed;
    left: 0;
    z-index: 1;
    display: flex;
    justify-content: center;
    align-items: center;
    transition: background-color 500ms ease,
                border-bottom 500ms ease;
}

#site-title {
    color: black;
    font-family: cursive;
    font-size: 40px;
    font-weight: bold;
    transition: color 500ms ease;
}

.intro {
    position: relative;
    top: 100px;
}

.locations {
    position: relative;
    top: 140px;
    display: flex;
    flex-direction: column;
}

.intro h3, .locations h3 {
    color: rgb(93, 109, 126);
    font-size: 26px;
    font-family: Georgia, 'Times New Roman', Times, serif;
}

.intro p, .locations p {
    color: black;
    font-size: 18px;
    transition: color 500ms ease;
}

.addresses {
    background-color: rgb(229, 231, 233);
    width: 100%;
    height: 50px;
    margin: 0 auto;
    position: relative;
    top: 8px;
    display: flex;
    flex-direction: row;
    justify-content: center;
    cursor: pointer;
    transition: background-color 500ms ease;
}

.addresses p {
    color: rgb(23, 32, 42);
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    transition: none;
}

.addresses p:hover {
    color: rgb(229, 231, 233);
    background-color: rgb(23, 32, 42);
}

.addresses p.transition {
    transition: color 500ms ease;
}

.map-img {
    background-image: url('img/location_light.jpeg');
    background-size: contain;
    background-repeat: no-repeat;
    width: 100%;
    aspect-ratio: 909 / 550;
    position: relative;
    top: 8px;
    transition: background-image 500ms ease;
}

.map-img-eastlakes::before {
    content: '';
    width: 100%;
    height: 100%;
    position: absolute;
    top: 0;
    left: 0;
    background: radial-gradient(circle at 37% 89%, transparent 6%, rgba(0, 0, 0, 0.5) 10%);
}

.map-img-kensington::before {
    content: '';
    width: 100%;
    height: 100%;
    position: absolute;
    top: 0;
    left: 0;
    background: radial-gradient(circle at 38% 84%, transparent 6%, rgba(0, 0, 0, 0.5) 10%);
}

.map-img-pennant-hills::before {
    content: '';
    width: 100%;
    height: 100%;
    position: absolute;
    top: 0;
    left: 0;
    background: radial-gradient(circle at 10% 16%, transparent 5%, rgba(0, 0, 0, 0.5) 8%);
}

.map-footer {
    position: relative;
    top: 8px;
    display: flex;
    justify-content: space-between;
    align-items: center;
    gap: 15px;
}

.bird {
    background-color: rgb(186, 190, 191);
    position: relative;
    display: flex;
    flex-direction: column;
    transition: background-color 500ms ease;
}

.pink-galah {
    top: 190px;
}

.cockatoo {
    top: 240px;
}

.aus-magpie {
    top: 290px;
}

.profile {
    color: black;
    background-color: rgb(236, 240, 241);
    display: flex;
    transition: color 500ms ease,
                background-color 500ms ease;
}

.profile img {
    height: 100px;
    margin: 10px;
    border-radius: 50%;
}

.profile-text {
    display: flex;
    flex-direction: column;
    justify-content: center;
}

.bird-name {
    font-family: Georgia, 'Times New Roman', Times, serif;
    font-weight: bold;
    font-size: 22px;
    margin-top: 15px;
}

.bird-description {
    margin-right: 10px;
    margin-bottom: 10px;
}

.action-bar {
    display: flex;
}

.action-text {
    width: 50%;
    padding: 5px 10px;
    background-color: rgb(226, 230, 231);
    display: flex;
    justify-content: center;
    align-items: center;
    transition: background-color 500ms ease;
}

a {
    color: rgb(0, 113, 227);
    text-decoration: none;
}

a:hover{
    text-decoration: underline;
}

.bird-images {
    margin: 10px;
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    gap: 10px;
}

.bird-images img {
    width: 100%;
    height: auto;
}

@media (max-width: 1000px) {
    .bird-images {
        grid-template-columns: repeat(2, 2fr);
    }
}

.footer {
    color: black;
    text-align: center;
    height: 35px;
    position: relative;
    top: 305px;
    transition: color 500ms ease;
}

/* dark mode button */
#dark-mode-button {
    color: rgb(242, 243, 244);
    background-color: rgb(52, 73, 94);
    padding: 12px;
    border-radius: 5px;
    box-shadow: 0 1px 3px 2px rgba(0, 0, 0, 0.3);
    cursor: pointer;
    position: absolute;
    right: 10px;
    filter: brightness(1);
    transition: filter 0.1s ease;
}

#dark-mode-button:hover {
    filter: brightness(0.8);
}

/* dark mode configurations */
body.dark {
    background-color: rgb(22, 27, 30);
}

body.dark header {
    background-color: rgb(37, 38, 39);
    border-bottom: 0.6px solid rgb(54, 58, 61);
}

body.dark #site-title {
    color: rgb(242, 243, 244);
}

body.dark p{
    color: rgb(202, 207, 210);
}

body.dark .addresses {
    background-color: rgb(44, 46, 48);
}

body.dark .addresses p:hover {
    color: rgb(202, 207, 210);
    background-color: rgb(34, 36, 38);
}

body.dark .map-img {
    background-image: url('img/location_dark.jpeg');
}

body.dark .bird {
    background-color: rgb(21, 25, 26);
}

body.dark .bird .profile {
    color: rgb(236, 240, 241);
    background-color: rgb(46, 50, 51);
}

body.dark .action-text {
    background-color: rgb(36, 40, 41);
}

body.dark .footer {
    color: rgb(202, 207, 210);
}

/* mobile version */
@media screen and (max-width: 480px) {
    /* light mode configurations */
    body {
        width: 100%;
        
    }

    header {
        justify-content: space-between;
    }

    #site-title {
        margin-left: 10px;
    }

    .intro, .locations-intro {
        margin-left: 10px;
        margin-right: 10px;
    }

    .map-img {
        background-image: url('img/location_mobile_light.jpeg');
        aspect-ratio: 316 / 459;
    }

    .map-img-eastlakes::before {
        background: radial-gradient(circle at 83% 90%, transparent 8%, rgba(0, 0, 0, 0.5) 12%);
    }
    
    .map-img-kensington::before {
        background: radial-gradient(circle at 86% 83%, transparent 8%, rgba(0, 0, 0, 0.5) 12%);
    }
    
    .map-img-pennant-hills::before {
        background: radial-gradient(circle at 17% 16%, transparent 8%, rgba(0, 0, 0, 0.5) 12%);
    }

    .map-footer {
        top: 5px;
        margin: 3px;
    }

    /* dark mode button */
    #dark-mode-button {
        padding: 8px;
        border-radius: 5px;
        right: 6px;
    }

    /* dark mode configurations */
    body.dark .map-img {
        background-image: url('img/location_mobile_dark.jpeg');
    }
}

